Update the example env file
This makes the example file more compatible with
[copy_env](https://github.com/jonallured/copy_env/).

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-EXCHANGE_APP_SECRET=REPLACE-WITH-GRAVITY-APP-SECRET
-EXCHANGE_APP_ID=REPLACE-WITHI-GRAVITY-APP-ID
+EXCHANGE_APP_ID=REPLACE
+EXCHANGE_APP_SECRET=REPLACE
+FORCE_URL=https://staging.artsy.net
 GRAVITY_API_ROOT=https://stagingapi.artsy.net/
 GRAVITY_JWT=REPLACE
-HMAC_SECRET=<GRAVITY_CLIENT_APPLICATION_SECRET>
-STRIPE_API_KEY=REPLACE
+HMAC_SECRET=REPLACE
 RABBITMQ_TLS=false
-RABBITMQ_URL=amqp://<URL>
+RABBITMQ_URL=REPLACE
+STRIPE_API_KEY=REPLACE
 TAXJAR_API_KEY=REPLACE
 TAXJAR_API_URL=https://api.sandbox.taxjar.com
-
-VIBRATIONS_URL=https://admin-partners-staging.artsy.net
 TORQUE_URL=https://admin-staging.artsy.net
-FORCE_URL=https://staging.artsy.net
+VIBRATIONS_URL=https://admin-partners-staging.artsy.net
